Add carne-asada.html and pozole.html

--- a/enchiladas.html
+++ b/enchiladas.html
@@ -14,7 +14,26 @@
 
    <h2>Description</h2>
    <p>These are simple to make cheese enchiladas that require minimal ingredients. Not only is is tasty it is fast to make as well.
-      Mexican enchiladas.
+      They're easy to make and incredibly tempting! Add chicken or cilantro if you like.
    </p>
+
+   <h3>Ingredients</h3>
+   <ul>
+       <li>Cooking spray</li>
+       <li>2 cans of refried beans</li>
+       <li>2 cups of shredded Mexican cheese blend</li>
+       <li>1/2 cup chopped onion</li>
+       <li>12 small corn tortillas</li>
+       <li>2 cans red enchilada sauce</li>
+   </ul>
+
+   <h4>Steps</h4>
+   <ol>
+      <li>Step 1: Preheat oven to 350 degrees F (175 degrees C). Spray a 9x13-inch casserole dish with cooking spray.</li>
+      <li>Step 2: Mix refried beans, 1 1/2 cup Mexican cheese blend, and onion in a microwave-safe bowl; heat in microwave until cheese is melted, about 1 minute.</li>
+      <li>Step 3: Stack tortillas, 3 at a time, on a microwave-safe plate; heat in microwave until warmed, about 30 seconds. Repeat with remaining tortillas.</li>
+      <li>Step 4: Pour enough enchilada sauce onto a small plate to cover. Quickly dip both sides of each tortilla in enchilada sauce. Spoon bean filling down the middle of each dipped tortilla and wrap tortilla around filling. Arrange filled tortillas in the prepared baking dish. Pour remaining enchilada sauce over filled tortillas and sprinkle remaining cheese over sauce layer. Cover dish with aluminum foil.</li>
+      <li>Step 5: Bake in the preheated oven until sauce is bubbling and cheese is melted, 35 and 40 minutes.</li>
+   </ol>
 
 </body>
