--- a/pozole.html
+++ b/pozole.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<html>
 <head>
    <meta charset="UTF-8">
-   <title>Odin Recipes(Pozole)</title>
+   <title>Pozole</title>
 </head>
 
 <body>
@@ -41,3 +41,4 @@
   </ol>
 
 </body>
+</html>
