--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
    <meta charset="UTF-8">
    <title>Mexican Recipes</title>
+   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 
-   <h1>Mexican Recipes</h1> 
-   <img src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.18169-9/17200871_1825068134434568_3104611462412245275_n.png?_nc_cat=110&ccb=1-5&_nc_sid=973b4a&_nc_ohc=seQ4fY4mmGkAX-dmtk-&_nc_ht=scontent-lax3-1.xx&oh=215205881141196f12156f01a79ef5f4&oe=618CF1CA" alt="moms mexican recipes with red peppers on the side">
+   <h1><em>Mexican Recipes</em></h1> 
+   <img class="moms-recipes" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.18169-9/17200871_1825068134434568_3104611462412245275_n.png?_nc_cat=110&ccb=1-5&_nc_sid=973b4a&_nc_ohc=seQ4fY4mmGkAX-dmtk-&_nc_ht=scontent-lax3-1.xx&oh=215205881141196f12156f01a79ef5f4&oe=618CF1CA" alt="moms mexican recipes with red peppers on the side">
    
 <ul>
    <li><a href="enchiladas.html">Enchiladas</a></li>
