--- a/carne-asada.html
+++ b/carne-asada.html
@@ -4,13 +4,14 @@
 <head>
    <meta charset="UTF-8">
    <title>Carne Asada</title>
+   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
    <h1>Carne Asada</h1> 
 
-   <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5948634.jpg&w=1200&h=678&c=sc&poi=face&q=85" alt="carne asada tacos on corn tortillas with cilantro and onion toppings">
+   <img class="carne-asada-pic" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5948634.jpg&w=1200&h=678&c=sc&poi=face&q=85" alt="carne asada tacos on corn tortillas with cilantro and onion toppings">
 
    <h2>Description</h2>
    <p>This Sonoran carne asada is cheap and easy to make with beef chuck and excellent for a fast supper! Serve in warmed tortillas topped with onions, tomatoes, avocado, lettuce, red cabbage slaw, and/or cilantro. Garnish with a wedge of lime, to be squeezed over taco before eating. </p>
@@ -31,8 +32,8 @@
 
    <h4>Steps</h4>
    <ol>
-      <li>Step: 1 Place beef chuck in a shallow bowl. Season with pepper, salt, and red pepper flakes. Add enough beef stock to cover. Add lemon juice, lime juice, jalapenos, and cilantro. Turn until evenly coated. Cover and refrigerate for at least 30 minutes, preferably 2 to 3 hours.</li>
-      <li>Step: 2 Heat oil in a large skillet over high heat. Stir in 1/3 of the beef and saute until just firm to the touch for medium- to medium-rare, 1 to 2 minutes per side. Be careful not to overcook, as the meat will get tough. Transfer to serving dish. Repeat with remaining beef.</li>
+      <li>Place beef chuck in a shallow bowl. Season with pepper, salt, and red pepper flakes. Add enough beef stock to cover. Add lemon juice, lime juice, jalapenos, and cilantro. Turn until evenly coated. Cover and refrigerate for at least 30 minutes, preferably 2 to 3 hours.</li>
+      <li>Heat oil in a large skillet over high heat. Stir in 1/3 of the beef and saute until just firm to the touch for medium- to medium-rare, 1 to 2 minutes per side. Be careful not to overcook, as the meat will get tough. Transfer to serving dish. Repeat with remaining beef.</li>
    </ol>   
    </ul>
 </body>
