--- a/pozole.html
+++ b/pozole.html
@@ -4,13 +4,14 @@
 <head>
    <meta charset="UTF-8">
    <title>Pozole</title>
+   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
   <h1>Pozole</h1>
 
-  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7433996.jpg&w=1200&h=678&c=sc&poi=face&q=85" alt="red pork pozole with hominy">
+  <img class="pozole-pic" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7433996.jpg&w=1200&h=678&c=sc&poi=face&q=85" alt="red pork pozole with hominy">
 
   <h2>Description</h2>
   <p>Easy, authentic Mexican Pozole. Serve with chopped white onion, cilantro, shredded cabbage, lime wedges, and corn tortillas or tostadas. </p>
@@ -34,10 +35,10 @@
 
   <h4>Steps</h4>
   <ol>
-    <li>Step 1: Toast the cumin in a small pot over medium-high heat until fragrant, being careful not to burn, 1 to 2 minutes. Add the pasilla chile peppers, ancho chile peppers, and guajillo chile peppers to the pot. Pour enough water into the pot to cover the peppers completely. Place the garlic cloves, onion, and tomatoes atop the chiles. Cover the pot with a lid, reduce heat to low, and simmer the mixture for 10 minutes. Remove from heat and allow the mixture to cool. Pour the cooled mixture into a blender; puree until smooth.</li>
-    <li>Step 2: Put the pork in the bottom of a slow cooker; season generously with salt. Add the bay leaves to the slow cooker and pour the pureed chile pepper mixture over the pork.</li>
-    <li>Step 3: Cook on Low for 8 to 9 hours or overnight. Skim as much fat from the surface as possible. Remove the pork to a cutting board or bowl and shred with two forks. Return the shredded pork to the slow cooker and mix with the sauce.</li>
-    <li>Step 4: Combine the shredded pork with sauce, chicken stock, and hominy in a large pot over medium heat; cook until the stock is hot, 10 to 15 minutes. Serve hot.</li>  
+    <li>Toast the cumin in a small pot over medium-high heat until fragrant, being careful not to burn, 1 to 2 minutes. Add the pasilla chile peppers, ancho chile peppers, and guajillo chile peppers to the pot. Pour enough water into the pot to cover the peppers completely. Place the garlic cloves, onion, and tomatoes atop the chiles. Cover the pot with a lid, reduce heat to low, and simmer the mixture for 10 minutes. Remove from heat and allow the mixture to cool. Pour the cooled mixture into a blender; puree until smooth.</li>
+    <li>Put the pork in the bottom of a slow cooker; season generously with salt. Add the bay leaves to the slow cooker and pour the pureed chile pepper mixture over the pork.</li>
+    <li>Cook on Low for 8 to 9 hours or overnight. Skim as much fat from the surface as possible. Remove the pork to a cutting board or bowl and shred with two forks. Return the shredded pork to the slow cooker and mix with the sauce.</li>
+    <li>Combine the shredded pork with sauce, chicken stock, and hominy in a large pot over medium heat; cook until the stock is hot, 10 to 15 minutes. Serve hot.</li>  
   </ol>
 
 </body>
